--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -3,20 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>301 Moved Permanently</title>
-  <meta http-equiv="refresh" content="1;url=https://joric.github.io/folon/">
   <link rel="canonical" href="https://joric.github.io/folon/">
-  <script>
-    if (location.hash && location.hash.length > 1) {
-      location.href = 'https://joric.github.io/folon/' + location.hash;
-    }
-  </script>
+  <meta http-equiv="refresh" content="0; url=https://joric.github.io/folon/">
 </head>
 <body>
   <h1>301 Moved Permanently</h1>
-  <p>This page has moved to a new location:</p>
-  <h2><a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></h2>
-  <p>Please update your bookmarks.</p>
-  <p>Redirecting in a second...</p>
+  <p>This page has moved to <a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a>.</p>
 </body>
 </html>
-
