--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -7,7 +7,7 @@
   <script>
     const target = 'https://joric.github.io/folon/';
     const newUrl = location.hash ? target + location.hash : target;
-    location.href = newUrl;
+    location.replace(newUrl);
   </script>
   <noscript>
     <meta http-equiv="refresh" content="0; url=https://joric.github.io/folon/">
