--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <h1>301 Moved Permanently</h1>
-  <p>This page has moved to <a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a>.</p>
+  <p>This page has moved to <a href="https://joric.github.io/folon/">https://joric.github.io/folon/</a></p>
 </body>
 </html>
